3d-map begin, now game-like movement

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<h1>Flipboard</h1>
 				<a href="#logonview-page" data-rel="back">Exit</a>
 			</div>
-			<div data-role="main" data-position="pixed">
+			<div data-role="main">
 				<!-- This is where we render the gameview or gview-->
 				<canvas class="gview"></canvas>
 				<!-- jsLibs -->
@@ -42,6 +42,9 @@
 				<script src="js/jquery.hotkeys.js"></script>
 				<script src="js/players.js"></script>
 				<script src="js/gview.js"></script>
+			</div>
+			<div data-role="footer"	data-position="pixed">
+				<h1>by voidcode</h1>
 			</div>
 		</div>
 	</body>
